--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -18,6 +18,18 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/personasapi']">Personas api</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/empleados']">Empleados filtro salario</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/empleadosoficio']">Empleados Oficio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/plantilla']">Plantilla</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/plantillamultiple']">Plantilla multiple</a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Dropdown
