--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -30,6 +30,9 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/plantillamultiple']">Plantilla multiple</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/maestrodetalle']">Maestro detalle</a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Dropdown
